--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,12 +1,22 @@
 spring:
   datasource:
-    driver-class-name: org.postgresql.Driver
-    username:
+    driver-class-name: org.h2.Driver
+    username: axel
     password:
-    url:
+    url: jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;
     hikari:
       maximum-pool-size: 10
       auto-commit: true
       idle-timeout: 50
+  jpa:
+    show-sql: true
+    database-platform: org.hibernate.dialect.H2Dialect
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+  jackson:
+    serialization:
+      fail-on-empty-beans: false
 server:
   port: 8080
