--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,11 +1,20 @@
 spring:
-  r2dbc:
-    username:
-    url:
+  datasource:
+    driver-class-name: org.h2.Driver
+    username: axel
     password:
-    pool:
+    url: jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;
+    hikari:
+      maximum-pool-size: 10
+      auto-commit: true
+      idle-timeout: 50
+  jpa:
+    show-sql: true
+  h2:
+    console:
       enabled: true
-      initial-size: 10
-      max-size: 20
+  jackson:
+    serialization:
+      fail-on-empty-beans: false
 server:
-  port:
+  port: 8080
