--- a/src/main/resources/application-staging.yml
+++ b/src/main/resources/application-staging.yml
@@ -1,10 +1,20 @@
-server:
-  port:
 spring:
-  r2dbc:
-    url:
-    username:
+  datasource:
+    driver-class-name: org.h2.Driver
+    username: axel
     password:
-    pool:
-      initial-size:
+    url: jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;
+    hikari:
+      maximum-pool-size: 10
+      auto-commit: true
+      idle-timeout: 50
+  jpa:
+    show-sql: true
+  h2:
+    console:
       enabled: true
+  jackson:
+    serialization:
+      fail-on-empty-beans: false
+server:
+  port: 8080
